--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.19.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
-    "@types/node": "^24.10.0"
+    "@types/node": "^24.10.0",
+    "nodemon": "^3.1.10"
   }
 }
